Fixed review comments